--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <title>Find a Bike</title>
   </head>
   <body>
     <div class="container">
-      <h1 id="header">Find a Bike</h1>
+      <h1 id="header">Find a Bike<img src="images/bike-placeholder.png" alt=""></h1>
       <hr>
       <h3 id="subheader">Help find stolen bikes in your area!</h3>
       <label for="location">Enter a location:</label>
