add ability to link to specific bike and get detail page.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <title>Find a Bike</title>
   </head>
@@ -17,6 +17,9 @@
       <hr>
       <div id="showErrors"></div>
       <ul id="showBikes"></ul>
+      <div id="bikeDetailPage">
+        <h3 class="bikename" id="subheader"></h3>
+      </div>
     </div>
   </body>
 </html>
