add promises and seperate back end and front end more fully.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,21 @@
       <div id="showErrors"></div>
       <ul id="showBikes"></ul>
       <div id="bikeDetailPage">
-        <h3 class="bikename" id="subheader"></h3>
+        <table>
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="bikename" id="subheader"></h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6" id="description">
+              <h5>Description:</h5><p span id="bikedescription"></p>
+            </div>
+            <div class="col-md-6" id="bikephotos">
+
+            </div>
+          </div>
+        </table>
       </div>
     </div>
   </body>
